[package]
name = "package"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8"
number_conv = { git = "https://github.com/MwlLj/rust-math", version = "0.1.11" }
rust_parse = { git = "https://github.com/MwlLj/rust_parse", version = "0.1.11" }
