[package]
name = "walk_test"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path = { path = "../.." }
rust_parse = { git = "https://github.com/MwlLj/rust_parse" }

